# rust-web-starter

./: README.md  docker-compose.yml
api/: Cargo.toml  Rocket.toml
api/src/: main.rs
api/src/controllers/: api.rs
api/src/nats_connection/: mod.rs  pooled_connection.rs
processor/: Cargo.toml
processor/src/: main.rs
processor/src/state/: aggregator.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: package.json
web/src/: App.css  App.tsx
