[package]
name = "test_api"
version = "0.0.1"

[dependencies]
test_shared = { path = "../shared" }
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0.77"
serde_derive = "1.0.99"
serde_json = "*"
nats = "0.3.2"
r2d2 = "0.8.3"
r2d2-nats = "0.1.0"
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
